2009-10-19  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        Add a settings to allow DOM pastes to be performed.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2009-10-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Make WebKitHitTestResult actually appear in the
        documentation index.

        * docs/webkitgtk-docs.sgml:

2009-10-15  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Protect WebSocket calls in case the feature is not compiled in.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2009-10-15  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        Add a settings to enable support for experimental Web Sockets.
        Currently this comes in handy in layout tests.

        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):
        (webkit_web_view_settings_notify):

2009-10-15  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        page transition may crash webkit
        https://bugs.webkit.org/show_bug.cgi?id=29890

        There are actually cases in which a resource may be asked using
        webkit_web_view_get_resource after a new load has already been
        started, so protect ourselves from crashes in this case.

        * WebCoreSupport/FrameLoaderClientGtk.cpp: